Remove calendar from the tab index so it doesn't jump appear

--- a/src/app/add-new-dialog/add-new-dialog.component.html
+++ b/src/app/add-new-dialog/add-new-dialog.component.html
@@ -28,6 +28,7 @@
                       [showTime]="true" [showIcon]="true"
                       hourFormat="12" [stepMinute]="5"
                       [hideOnDateTimeSelect]="false"
+                      [tabindex]="-1"
                       [inputStyle]="{'min-width': '300px'}" appendTo="body" ></p-calendar>
         </td>
       </tr>
