--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,10 @@
 <div class="main-wrap">
 
 <div class="button-row">
-  <!-- TODO Edit a single selected row, try to leverage existing New Thing dialog? -->
   <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
-  <p-button (onClick)="manageTemplate.show()" icon="pi pi-list" [label]="'Manage ' + templateService.getTemplateCount() + ' Templates'" />
-  <p-button (onClick)="manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
-  <p-button (onClick)="manageThing.showEdit(selectedRows)" icon="pi pi-plus-circle" label="Edit Thing" [disabled]="!hasOneSelectedRow()" />
+  <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="'Manage ' + templateService.getTemplateCount() + ' Templates'" />
+  <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
+  <p-button (onClick)="requestEditRow(manageThing)" icon="pi pi-plus-circle" label="Edit Thing" [disabled]="!hasOneSelectedRow()" />
   <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
   <p-confirmPopup />
   
