Polished up Reminder concept, moved PrimeNG style override to a separate sheet and commented why each change was done, and finally broke and added date-fns

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,7 +11,8 @@
   --name-col-width: 350px;
 }
 
-.p-toolbar-group-start p-button {
+.p-toolbar-group-start p-button,
+.reminder-button {
   margin-right: 10px;
 }
 
