--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,56 @@
-<p-progressBar [mode]="things.loading ? 'indeterminate' : 'determinate'" class="loading-bar" />
 <riw-global-toast />
 
-<p-toolbar>
-  <div class="p-toolbar-group-start">
-    <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
-    <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="'Manage ' + templateService.getTemplateCount() + ' Templates'" />
-    <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
-    <p-button (onClick)="requestEditRow(manageThing)" icon="pi pi-plus-circle" label="Edit Thing" [disabled]="!hasOneSelectedRow()" />
-    <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
-    <!-- TODO Have the option to "quick fill" a Template that has been marked as "Pinned", which means it will show up on the toolbar, and be a 1-click and 1-fill of a field to quickly enter things. Example would be Reminder/Note, Work Commute, etc. Something repetitive that you don't want to have to keep manually re-entering -->
-    <p-confirmPopup />
+<div class="fixed-toolbar">
+  <p-progressBar [mode]="things.loading ? 'indeterminate' : 'determinate'" class="loading-bar" />
+  <div class="toolbar-content">
+    <div class="toolbar-left">
+      <!-- TODO Have the option to "quick fill" a Template that has been marked as "Pinned", which means it will show up on the toolbar, and be a 1-click and 1-fill of a field to quickly enter things. Example would be Reminder/Note, Work Commute, etc. Something repetitive that you don't want to have to keep manually re-entering -->
+      <!-- TODO When refreshing our data we should clear our filters, or fix them to re-apply, as currently the content resets and all rows are shown -->
+      <!-- TODO Instead of the dynamicLabel approach, perhaps just use a Speed Dial PrimeNG component on mobile for buttons? Could float in top right, don't even need the toolbar -->
+      <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
+      <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="dynamicLabel('Manage ' + templateService.getTemplateCount() + ' Templates')" />
+      <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" [label]="dynamicLabel('New Thing')" />
+      <p-button (onClick)="requestEditRow(manageThing)" icon="pi pi-pencil" [label]="dynamicLabel('Edit Thing')" [disabled]="!hasOneSelectedRow()" />
+      <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
+      <p-confirmPopup />
+    </div>
+    <div class="toolbar-right">
+      <!-- TODO Get Utility.plural and similar functions accessible from Angular templates -->
+      <p-splitButton (onClick)="toggleShowReminders()"
+                    icon="pi pi-clock" [model]="getRemindersForSplitButton()"
+                    [label]="getReminderLabel()"
+                    *ngIf="things.hasReminders()"
+                    class="reminder-button" styleClass="p-button-secondary p-button-sm"/>
+      <!-- TODO Handle a flag for if we're mobile or not, which just means we're at a set CSS breakpoint, not related to browser string -->
+      <!-- TODO Convert global search into an icon button and dialog input on mobile -->
+      <span class="p-input-icon-left">
+        <i class="pi pi-search"></i>
+        <input pInputText type="text" (input)="globalFilterTable($event)" placeholder="Search Things" />
+      </span>
+      <p-progressSpinner *ngIf="things.loading" />
+    </div>
   </div>
-  
-  <div class="p-toolbar-group-end">
-    <p-splitButton (onClick)="toggleShowReminders()"
-                   icon="pi pi-clock" [model]="getRemindersForSplitButton()"
-                   [label]="things.reminders.length + ' Reminders'"
-                   *ngIf="things.hasReminders()"
-                   class="reminder-button" styleClass="p-button-secondary p-button-sm"/>
-    <span class="p-input-icon-left">
-      <i class="pi pi-search"></i>
-      <input pInputText type="text" (input)="globalFilterTable($event)" placeholder="Search Things" />
-    </span>
-    <p-progressSpinner *ngIf="things.loading" />
-  </div>
-</p-toolbar>
+</div>
 
 <div class="main-wrap">
-
-<riw-manage-thing-dialog #manageThing (manageTemplateEvent)="manageTemplate.show($event)" />
-<riw-manage-template-dialog #manageTemplate />
 
 <!-- TODO Have a way to automatically clean up Reminders, done in the Node service itself, which will automatically strip the reminder flag if the time is passed. Don't worry about timezones for now -->
 <ng-container *ngIf="showReminders">
   <riw-reminder-message *ngFor="let reminder of things.reminders" [thing]="reminder" />
 </ng-container>
 
-<p-table #thingTable
-         [value]="things.data" styleClass="p-datatable-striped"
-         class="thing-table"
+<p-table #thingTable *ngIf="things.loadedAndHasData()"
+         [value]="things.data" [loading]="things.loading"
+         class="thing-table" styleClass="p-datatable-striped"
          selectionMode="multiple" [(selection)]="selectedRows"
          (sortFunction)="customSort($event)" [customSort]="true"
          sortField="time" [sortOrder]="-1"
-         [loading]="things.loading"
-         [globalFilterFields]="['name', 'time', 'templateType']">
+         [globalFilterFields]="['name', 'time', 'templateType']"
+         [paginator]="true" [rows]="100"
+         [pageLinks]="3" [alwaysShowPaginator]="false" [showFirstLastIcon]="false" [showCurrentPageReport]="true">
   <ng-template pTemplate="header">
     <tr>
-      <th pSortableColumn="name" class="name-col">Name ({{things.data.length}}) <p-sortIcon field="name" /></th>
+      <th pSortableColumn="name" class="name-col" >Name ({{things.data.length}}) <p-sortIcon field="name" /></th>
       <th pSortableColumn="templateType" class="type-col">Type <p-sortIcon field="templateType" /></th>
       <th pSortableColumn="time" class="time-col">Date <p-sortIcon field="time" /></th>
       <th pSortableColumn="fields" class="fields-col">Fields <p-sortIcon field="fields" /></th>
@@ -54,6 +58,7 @@
     <tr>
       <th><p-columnFilter type="text" field="name" matchMode="contains" /></th>
       <th><p-columnFilter type="text" field="templateType" matchMode="contains" /></th>
+      <!-- TODO Could add a custom filter option of "Reminder=true/false" for the time column -->
       <th><p-columnFilter type="date" field="time" appendTo="body" /></th>
       <th><input pInputText type="text" (change)="filterFields($event)" style="height: 30px;" /></th>
     </tr>
@@ -68,7 +73,7 @@
       </td>
       <td class="center">
         <span [style]="'color:' + data.color">
-          <span class="pi pi-bell" *ngIf="data.hasFutureReminder()" pTooltip="Thing is a Reminder"></span> {{ data.time | date: 'MMM dd &rsquo;yy \'at\' h:mm a' }}
+          <span class="pi pi-clock" *ngIf="data.hasFutureReminder()" pTooltip="Thing is a Reminder"></span> {{ data.time | date: 'MMM dd &rsquo;yy \'at\' hh:mm a' }}
         </span>
       </td>
       <td>{{ data.getFieldsAsString() }}</td>
@@ -77,9 +82,19 @@
   <ng-template *ngIf="!things.loading" pTemplate="emptymessage" let-columns>
     <tr>
       <td colspan="4" class="center">
-        No data found yet
+        No data matches your query
       </td>
     </tr>
   </ng-template>
 </p-table>
+
+<div *ngIf="!things.loadedAndHasData()" class="no-things-wrap">
+  <span *ngIf="!things.loading">
+    Add something to get started
+  </span>
 </div>
+
+</div>
+
+<riw-manage-thing-dialog #manageThing (manageTemplateEvent)="manageTemplate.show($event)" />
+<riw-manage-template-dialog #manageTemplate />
